# arxiv_rag

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  draw_graph.ipynb  pyproject.toml
src/: api.py  arxiv_downloader.py  chunker.py  embedder.py  ingest_pdf.py  pdf_extractor.py  rag_graph.py  rag_qa.py  vectorstore.py
tests/: conftest.py  test_arxiv_downloader.py  test_chunker.py  test_embedder.py  test_pdf_extractor.py  test_vectorstore.py
